# api/api_sources/swagger.yaml
@@ -340,8 +340,8 @@ definitions:
       - date
       - lat
       - long
-      - width
-      - length
+      - horizontal_dimension
+      - vertical_dimension
       - accessDescription
       - observerFirstName
       - observerLastName
@@ -378,9 +378,9 @@ definitions:
         type: number
       long:
         type: number
-      width:
+      horizontal_dimension:
         type: number
-      length:
+      vertical_dimension:
         type: number
       accessDescription:
         type: string
@@ -443,8 +443,8 @@ definitions:
       - date
       - lat
       - long
-      - width
-      - length
+      - horizontal_dimension
+      - vertical_dimension
       - accessDescription
       - observerFirstName
       - observerLastName
@@ -481,9 +481,9 @@ definitions:
         type: number
       long:
         type: number
-      width:
+      horizontal_dimension:
         type: number
-      length:
+      vertical_dimension:
         type: number
       accessDescription:
         type: string
@@ -550,9 +550,9 @@ definitions:
         type: number
       long:
         type: number
-      width:
+      horizontalDimension:
         type: number
-      length:
+      verticalDimension:
         type: number
       accessDescription:
         type: string
@@ -848,8 +848,8 @@ definitions:
     type: object
     required:
       - observation_species_id
-      - width
-      - length
+      - horizontalDimension
+      - verticalDimension
       - accessDescription
       - surveyorFirstName
       - surveyorLastName
@@ -868,9 +868,9 @@ definitions:
     properties:
       observation_species_id:
         type: number
-      width:
+      horizontalDimension:
         type: number
-      length:
+      verticalDimension:
         type: number
       accessDescription:
         type: string
@@ -991,8 +991,8 @@ definitions:
       - lat
       - long
       - date
-      - width
-      - length
+      - horizontalDimension
+      - verticalDimension
       - accessDescription
       - surveyorFirstName
       - surveyorLastName
@@ -1016,9 +1016,9 @@ definitions:
       date:
         type: string
         description: Date in YYYY-MM-DD format
-      width:
+      horizontalDimension:
         type: number
-      length:
+      verticalDimension:
         type: number
       accessDescription:
         type: string
